# founder-intelligence

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agentic_core/: config.py  core.py  messages.py  run.py  schemas.py
agentic_core/providers/: __init__.py  base.py  openai_compatible.py
config/: agentic-core.example.yml  docker-compose.yml  fetcher-contract.yml  ingestion-rules.yml  rss-sources.yml  signal-rules.yml  sources.yml  user-profile.example.yml  user-profile.yml
design-demos/: information-source-dashboard.html
docs/: current-demo-architecture.md  fetcher-adapters.md  index.md  ingestion.md  product-definition-belief.md  signal-processing.md  storage.md  yaml-deterministic-pipeline.md
scripts/: l4_migrate.py
src/: build_signals.rb  build_source_dashboard.rb  fetch_rss.rb  ingest_adapter_output.rb  store_canonical_jsonl.rb  web_app.rb
tests/: conftest.py  test_cli.py  test_config.py  test_connector_contract.py  test_core_loop.py  test_hybrid_ranking.py  test_imports.py  test_l4_api.py  test_l4_database.py  test_l4_domain_contracts.py  test_l4_feature_flags.py  test_l4_m0_guards.py  test_l4_migration.py  test_l4_workflow.py  test_messages.py  test_pipeline_tools.py  test_profile_compiler.py  test_provider.py  test_pydantic_ai_cutover.py  test_pydantic_ai_runtime.py  test_python_pipeline_parity.py  test_python_pipeline_runner.py  test_runtime_tools.py  test_source_catalog.py  test_source_discovery.py  test_tools.py  test_unified_web_app.py  test_web_app.rb  test_web_core.rb  test_workbench_api.py
web_workbench/: app.py
(+112 files in other folders)
