[project]
name = "founder-intelligence-agent"
version = "0.1.0"
description = "Local Founder Intelligence Agentic Core"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "opentelemetry-sdk>=1.43.0,<2.0.0",
  "pydantic>=2.8.0",
  "pydantic-ai-slim[openai]>=2.9.0,<3.0.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/agentic-core", "."]
